--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -13,4 +13,35 @@
     <%= @question.content %>
 </p>
 
+<h2>answers</h2>
+<% @question.answers.each do |answer| %>
+    <p>
+        Name:<br>
+        <%= answer.name %>
+    </p>
+        <p>
+        Content:<br>
+        <%= answer.content %>
+    </p>
+
+    <p>
+        <%= link_to "destroy_answer" , [answer.question , answer] , data: {turbo_method: "delete" , turbo_confirm: "Ary you sure?"} %>
+    </p>
+<% end %>
+<h2>Add a answer</h2>
+
+<%= form_with model: [@question, @question.answers.build] do |form| %>
+    <div class="">
+        <%= form.label :name %><br>
+        <%= form.text_field :name %>
+    </div>
+    <div class="">
+        <%= form.label :content %><br>
+        <%= form.text_field :content %>
+    </div>
+    <div class="">
+        <%= form.submit %>
+    </div>
+<% end %>
+
 <%= link_to "index" , questions_path %>
